welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:35: error: not found: value Couleur
hH(Couleur.Yellow);
   ^